added analysis folder

--- a/data_loader_example.ipynb
+++ b/data_loader_example.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "66dbfc49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T15:28:15.702853Z",
-     "start_time": "2023-01-13T15:28:15.111164Z"
+     "end_time": "2023-01-19T08:08:54.441437Z",
+     "start_time": "2023-01-19T08:08:54.436435Z"
     }
    },
    "outputs": [],
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c4e42307",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T15:28:15.718849Z",
-     "start_time": "2023-01-13T15:28:15.704854Z"
+     "end_time": "2023-01-19T08:08:55.330267Z",
+     "start_time": "2023-01-19T08:08:55.317155Z"
     }
    },
    "outputs": [],
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c78d8f37",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T15:28:17.284837Z",
-     "start_time": "2023-01-13T15:28:15.720838Z"
+     "end_time": "2023-01-19T09:19:34.327666Z",
+     "start_time": "2023-01-19T09:19:32.441552Z"
     }
    },
    "outputs": [],
@@ -63,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "56d47420",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T15:28:17.695857Z",
-     "start_time": "2023-01-13T15:28:17.290837Z"
+     "end_time": "2023-01-19T08:08:58.319246Z",
+     "start_time": "2023-01-19T08:08:57.932336Z"
     }
    },
    "outputs": [
@@ -498,7 +498,7 @@
        "[9339 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
