add notebook for data visualization

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7ea8ad39",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7ced3d86",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "fd4a26d1",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,24 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "d55b44f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([nan,  3.,  5.,  1.,  2., 55.,  6.,  4.,  8.,  7., 12., 14., 10.,\n",
-       "        9., 15., 11., 37., 17., 13., 21., 50., 34., 22., 16., 19.])"
+       "22"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['floor'].unique()"
+    "df['property_type'].nunique()"
    ]
   },
   {
@@ -356,7 +355,15 @@
    "id": "a6ef7004",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def histogram(pdData,column,nb=100,**kargs):\n",
+    "    if pdData[column].dtype == 'O':\n",
+    "        fig = px.histogram(pdData, x=column,nbins = nb,title='Histogram of '+column,color=column)\n",
+    "    else:\n",
+    "        fig = px.histogram(pdData, x=column,nbins = nb,title='Histogram of '+column)\n",
+    "    fig.update_layout(bargap=0.2)\n",
+    "    fig.show()"
+   ]
   }
  ],
  "metadata": {
