added score Property_type using a priori knowledge

--- a/data_loader_example.ipynb
+++ b/data_loader_example.ipynb
@@ -6,8 +6,8 @@
    "id": "66dbfc49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:47.480874Z",
-     "start_time": "2023-01-31T14:51:46.709857Z"
+     "end_time": "2023-02-02T10:07:58.671154Z",
+     "start_time": "2023-02-02T10:07:56.091610Z"
     }
    },
    "outputs": [],
@@ -29,8 +29,8 @@
    "id": "c4e42307",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:47.496855Z",
-     "start_time": "2023-01-31T14:51:47.483856Z"
+     "end_time": "2023-02-02T10:07:58.686152Z",
+     "start_time": "2023-02-02T10:07:58.673152Z"
     }
    },
    "outputs": [],
@@ -52,8 +52,8 @@
    "id": "c78d8f37",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:50.307849Z",
-     "start_time": "2023-01-31T14:51:47.497869Z"
+     "end_time": "2023-02-02T10:08:00.625350Z",
+     "start_time": "2023-02-02T10:07:58.688152Z"
     }
    },
    "outputs": [
@@ -498,8 +498,8 @@
    "id": "56d47420",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:50.853851Z",
-     "start_time": "2023-01-31T14:51:50.309849Z"
+     "end_time": "2023-02-02T10:08:01.052332Z",
+     "start_time": "2023-02-02T10:08:00.626351Z"
     }
    },
    "outputs": [
@@ -960,8 +960,8 @@
    "id": "1815772a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:53.583849Z",
-     "start_time": "2023-01-31T14:51:50.855849Z"
+     "end_time": "2023-02-02T10:08:03.459399Z",
+     "start_time": "2023-02-02T10:08:01.055333Z"
     },
     "scrolled": false
    },
@@ -1256,8 +1256,8 @@
    "id": "40a5fa8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:53.598849Z",
-     "start_time": "2023-01-31T14:51:53.585849Z"
+     "end_time": "2023-02-02T10:08:03.475402Z",
+     "start_time": "2023-02-02T10:08:03.461381Z"
     }
    },
    "outputs": [],
@@ -1272,8 +1272,8 @@
    "id": "534f4f37",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:51:55.405872Z",
-     "start_time": "2023-01-31T14:51:53.601849Z"
+     "end_time": "2023-02-02T10:08:04.994407Z",
+     "start_time": "2023-02-02T10:08:03.476382Z"
     }
    },
    "outputs": [],
@@ -1287,8 +1287,8 @@
    "id": "5e6abf1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-31T14:52:10.571052Z",
-     "start_time": "2023-01-31T14:51:55.409873Z"
+     "end_time": "2023-02-02T10:08:19.065112Z",
+     "start_time": "2023-02-02T10:08:04.996410Z"
     },
     "scrolled": false
    },
@@ -1596,8 +1596,366 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "273dc2c2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T10:27:10.944081Z",
+     "start_time": "2023-02-02T10:27:10.925081Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['property_type', 'city', 'size', 'floor', 'land_size', 'nb_rooms',\n",
+       "       'nb_bedrooms', 'nb_bathrooms', 'nb_parking_places', 'nb_boxes',\n",
+       "       'has_a_balcony', 'nb_terraces', 'has_a_cellar', 'has_a_garage',\n",
+       "       'has_air_conditioning', 'last_floor', 'upper_floors', 'price',\n",
+       "       'images'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns[[True, False, False, True, False, True, True, True, False, False, False, False, False, True, True, True, True, True, False, True, True,True, True, True, True, True, True, True ]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f77c7a6a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T10:35:53.918493Z",
+     "start_time": "2023-02-02T10:35:53.882494Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>property_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>appartement</th>\n",
+       "      <td>3.723562e+05</td>\n",
+       "      <td>15733</td>\n",
+       "      <td>2299000.0</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>321032.511155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>atelier</th>\n",
+       "      <td>1.425000e+06</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1550000.0</td>\n",
+       "      <td>1300000.0</td>\n",
+       "      <td>176776.695297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chalet</th>\n",
+       "      <td>4.306361e+05</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1300000.0</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>391193.604909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chambre</th>\n",
+       "      <td>1.063750e+05</td>\n",
+       "      <td>4</td>\n",
+       "      <td>132500.0</td>\n",
+       "      <td>95000.0</td>\n",
+       "      <td>17820.283387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>château</th>\n",
+       "      <td>1.010298e+06</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1950000.0</td>\n",
+       "      <td>261000.0</td>\n",
+       "      <td>510056.342593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>divers</th>\n",
+       "      <td>3.108264e+05</td>\n",
+       "      <td>2137</td>\n",
+       "      <td>2265000.0</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>320672.214666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>duplex</th>\n",
+       "      <td>4.040481e+05</td>\n",
+       "      <td>220</td>\n",
+       "      <td>2099000.0</td>\n",
+       "      <td>43000.0</td>\n",
+       "      <td>330580.749725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ferme</th>\n",
+       "      <td>3.234432e+05</td>\n",
+       "      <td>130</td>\n",
+       "      <td>1802000.0</td>\n",
+       "      <td>37450.0</td>\n",
+       "      <td>264561.206922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gîte</th>\n",
+       "      <td>4.583333e+05</td>\n",
+       "      <td>3</td>\n",
+       "      <td>630000.0</td>\n",
+       "      <td>265000.0</td>\n",
+       "      <td>183462.076008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hôtel</th>\n",
+       "      <td>4.910000e+05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>491000.0</td>\n",
+       "      <td>491000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hôtel particulier</th>\n",
+       "      <td>7.286500e+05</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1100000.0</td>\n",
+       "      <td>400000.0</td>\n",
+       "      <td>237179.120076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loft</th>\n",
+       "      <td>5.065806e+05</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2050000.0</td>\n",
+       "      <td>89000.0</td>\n",
+       "      <td>432933.317714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>maison</th>\n",
+       "      <td>3.274210e+05</td>\n",
+       "      <td>15675</td>\n",
+       "      <td>2289000.0</td>\n",
+       "      <td>24800.0</td>\n",
+       "      <td>277808.473009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>manoir</th>\n",
+       "      <td>7.562767e+05</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2200000.0</td>\n",
+       "      <td>246500.0</td>\n",
+       "      <td>505625.603608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>moulin</th>\n",
+       "      <td>5.167144e+05</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1011000.0</td>\n",
+       "      <td>180000.0</td>\n",
+       "      <td>256453.700316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>parking</th>\n",
+       "      <td>6.071635e+04</td>\n",
+       "      <td>96</td>\n",
+       "      <td>415000.0</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>67369.588612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>propriété</th>\n",
+       "      <td>6.730181e+05</td>\n",
+       "      <td>408</td>\n",
+       "      <td>2210526.0</td>\n",
+       "      <td>27990.0</td>\n",
+       "      <td>434945.815423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>péniche</th>\n",
+       "      <td>5.506125e+05</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1575000.0</td>\n",
+       "      <td>46000.0</td>\n",
+       "      <td>584961.294049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>terrain</th>\n",
+       "      <td>1.203039e+05</td>\n",
+       "      <td>1534</td>\n",
+       "      <td>2100000.0</td>\n",
+       "      <td>24465.0</td>\n",
+       "      <td>174690.467303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>terrain à bâtir</th>\n",
+       "      <td>1.018994e+05</td>\n",
+       "      <td>298</td>\n",
+       "      <td>1090000.0</td>\n",
+       "      <td>24800.0</td>\n",
+       "      <td>119010.825967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>viager</th>\n",
+       "      <td>1.733239e+05</td>\n",
+       "      <td>177</td>\n",
+       "      <td>2131895.0</td>\n",
+       "      <td>29250.0</td>\n",
+       "      <td>217962.675241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>villa</th>\n",
+       "      <td>5.255000e+05</td>\n",
+       "      <td>781</td>\n",
+       "      <td>2200000.0</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>358979.352529</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          price                                            \n",
+       "                           mean  count        max        min            std\n",
+       "property_type                                                              \n",
+       "appartement        3.723562e+05  15733  2299000.0    25000.0  321032.511155\n",
+       "atelier            1.425000e+06      2  1550000.0  1300000.0  176776.695297\n",
+       "chalet             4.306361e+05     48  1300000.0    25000.0  391193.604909\n",
+       "chambre            1.063750e+05      4   132500.0    95000.0   17820.283387\n",
+       "château            1.010298e+06     21  1950000.0   261000.0  510056.342593\n",
+       "divers             3.108264e+05   2137  2265000.0    25000.0  320672.214666\n",
+       "duplex             4.040481e+05    220  2099000.0    43000.0  330580.749725\n",
+       "ferme              3.234432e+05    130  1802000.0    37450.0  264561.206922\n",
+       "gîte               4.583333e+05      3   630000.0   265000.0  183462.076008\n",
+       "hôtel              4.910000e+05      1   491000.0   491000.0            NaN\n",
+       "hôtel particulier  7.286500e+05      6  1100000.0   400000.0  237179.120076\n",
+       "loft               5.065806e+05     54  2050000.0    89000.0  432933.317714\n",
+       "maison             3.274210e+05  15675  2289000.0    24800.0  277808.473009\n",
+       "manoir             7.562767e+05     15  2200000.0   246500.0  505625.603608\n",
+       "moulin             5.167144e+05     17  1011000.0   180000.0  256453.700316\n",
+       "parking            6.071635e+04     96   415000.0    25000.0   67369.588612\n",
+       "propriété          6.730181e+05    408  2210526.0    27990.0  434945.815423\n",
+       "péniche            5.506125e+05      8  1575000.0    46000.0  584961.294049\n",
+       "terrain            1.203039e+05   1534  2100000.0    24465.0  174690.467303\n",
+       "terrain à bâtir    1.018994e+05    298  1090000.0    24800.0  119010.825967\n",
+       "viager             1.733239e+05    177  2131895.0    29250.0  217962.675241\n",
+       "villa              5.255000e+05    781  2200000.0    45000.0  358979.352529"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"property_type\", \"price\"]].groupby(\"property_type\").agg([\"mean\", \"count\", \"max\", \"min\", \"std\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "07fc4c56",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T11:08:10.461161Z",
+     "start_time": "2023-02-02T11:08:10.443143Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def scorePropertyType(df):\n",
+    "    def minimizeCategoryPropertyType(value):\n",
+    "        if value in [\"château\", \"atelier\", \"hôtel particulier\", \"manoir\", \"péniche\", \"villa\", \"moulin\", \"loft\", \"propriété\"]:\n",
+    "            return 'diversCher'\n",
+    "        elif value in [\"terrain\", \"terrain à bâtir\"] : return \"terrain\"\n",
+    "        elif value in [\"chalet\", \"ferme\",  \"gîte\", \"viager\", \"maison\"] : return \"maison\"\n",
+    "        elif value in [\"duplex\", \"chambre\", \"appartement\"] : return \"appartement\"\n",
+    "        elif value in [\"hôtel\"] : return \"divers\"\n",
+    "        elif value in [\"parking\"] : return \"parking\"\n",
+    "        elif value in [\"divers\"] : return \"divers\"\n",
+    "        else : return value\n",
+    "    def scoringMap(value):\n",
+    "        if value =='appartement': return 0.543463 \n",
+    "        elif value == \"divers\" : return 0.369380\n",
+    "        elif value == \"diversCher\" : return 1.000000\n",
+    "        elif value == \"maison\" : return 0.492737\n",
+    "        elif value == \"parking\" : return 0.000000\n",
+    "        elif value == \"terrain\" : return 0.063189\n",
+    "        else:  raise Exception(\"Property type category not recognized\")\n",
+    "    return df.property_type.apply(minimizeCategoryPropertyType).apply(scoringMap)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "85d6f590",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T10:58:12.625111Z",
+     "start_time": "2023-02-02T10:58:12.592130Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df['scorePropertyType']  = scorePropertyType(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e40cec7d",
+   "id": "375a19bc",
    "metadata": {},
    "outputs": [],
    "source": []
