resolved import issues

--- a/image_captionning.ipynb
+++ b/image_captionning.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,14 +16,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-03T12:42:21.821898Z",
+     "start_time": "2023-02-03T12:42:21.813880Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "import torch\n",
+    "import torch, sys\n",
     "from PIL import Image\n",
-    "\n",
+    "from dataloader.get import DataGetter\n",
+    "sys.path.append('./LAVIS/')\n",
     "from lavis.models import load_model_and_preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-03T12:43:22.862981Z",
+     "start_time": "2023-02-03T12:43:21.129966Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id_annonce\n",
+       "35996577    LazyImages(len=4, isLoaded=False)\n",
+       "35811033    LazyImages(len=6, isLoaded=False)\n",
+       "35731841    LazyImages(len=4, isLoaded=False)\n",
+       "35886765    LazyImages(len=6, isLoaded=False)\n",
+       "35781137    LazyImages(len=5, isLoaded=False)\n",
+       "                          ...                \n",
+       "35881571    LazyImages(len=6, isLoaded=False)\n",
+       "35890109    LazyImages(len=6, isLoaded=False)\n",
+       "36010245    LazyImages(len=5, isLoaded=False)\n",
+       "35864579    LazyImages(len=5, isLoaded=False)\n",
+       "35748883    LazyImages(len=6, isLoaded=False)\n",
+       "Name: images, Length: 37368, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dg=DataGetter()\n",
+    "df=dg.getData(\"train\")\n",
+    "df.images"
    ]
   },
   {
@@ -84,9 +127,37 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.5"
   },
-  "orig_nbformat": 4,
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  },
   "vscode": {
    "interpreter": {
     "hash": "31ff630c6e82ba12fef539dea8022209045e49d81c27e1972fa5386bff428379"
