trying to setup spark, running on some weird error

--- a/data_loader_example.ipynb
+++ b/data_loader_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "66dbfc49",
    "metadata": {
     "ExecuteTime": {
@@ -125,32 +125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "2216a7cd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lavis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mLAVIS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mget_caption\u001b[39;00m \u001b[39mimport\u001b[39;00m get_caption\n\u001b[0;32m      4\u001b[0m df \u001b[39m=\u001b[39m dg\u001b[39m.\u001b[39mgetData(\u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m df\u001b[39m.\u001b[39mimages\u001b[39m.\u001b[39miloc[:\u001b[39m5\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: \u001b[39mlen\u001b[39m(x\u001b[39m.\u001b[39mload()))\n",
-      "File \u001b[1;32mc:\\My Projects\\challengedata.ens.fr-RealEstatePricePrediction\\LAVIS\\get_caption.py:4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPIL\u001b[39;00m \u001b[39mimport\u001b[39;00m Image\n\u001b[1;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlavis\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m load_model_and_preprocess\n\u001b[0;32m      6\u001b[0m \u001b[39m# setup device to use\u001b[39;00m\n\u001b[0;32m      7\u001b[0m device \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdevice(\u001b[39m\"\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mis_available() \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lavis'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from LAVIS.get_caption import get_caption\n",
     "\n",
-    "df = dg.getData(\"train\")\n",
-    "df.images.iloc[:5].apply(lambda x: len(x.load()))\n",
-    "\n",
     "def caption_from_image_file(x):\n",
     "    return [get_caption(i) for i in x.load()]\n",
+    "\n",
+    "df = dg.getData(\"train\")\n",
+    "df['captions'] = df['images'].apply(caption_from_image_file)\n",
+    "\n",
     "\n",
     "    \n"
    ]
