normalized the convention of preprocessor

--- a/preprocessing/image_preprocessing.ipynb
+++ b/preprocessing/image_preprocessing.ipynb
@@ -99,12 +99,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31ff630c6e82ba12fef539dea8022209045e49d81c27e1972fa5386bff428379"
+    "hash": "b58a440e7c41d8e6b23e002dc56fe0c4f343f7392b9b491490b79e5d7e2436cd"
    }
   }
  },
