normalized some class func

--- a/data_viz_example.ipynb
+++ b/data_viz_example.ipynb
@@ -39181,6 +39181,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b58a440e7c41d8e6b23e002dc56fe0c4f343f7392b9b491490b79e5d7e2436cd"
+   }
   }
  },
  "nbformat": 4,
