did some filtering, didnt push the captions

--- a/data_loader_example.ipynb
+++ b/data_loader_example.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c4e42307",
    "metadata": {
     "ExecuteTime": {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c78d8f37",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,25 @@
      "start_time": "2023-01-13T15:28:15.720838Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dg\u001b[39m.\u001b[39;49mgetData(\u001b[39m'\u001b[39;49m\u001b[39mtrain\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\My Projects\\challengedata.ens.fr-RealEstatePricePrediction\\dataloader\\get.py:26\u001b[0m, in \u001b[0;36mDataGetter.getData\u001b[1;34m(self, test_or_train)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[39mif\u001b[39;00m test_or_train \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     25\u001b[0m     df[\u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreadTabular()[\u001b[39m'\u001b[39m\u001b[39my_train\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 26\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mimages\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreadTabular()[\u001b[39m'\u001b[39;49m\u001b[39mX_\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m+\u001b[39;49mtest_or_train]\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mmap(\u001b[39mlambda\u001b[39;49;00m x: LazyImages(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata_folder_loc\u001b[39m+\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m/reduced_images\u001b[39;49m\u001b[39m\"\u001b[39;49m, test_or_train, x))\n\u001b[0;32m     27\u001b[0m \u001b[39mreturn\u001b[39;00m df\n",
+      "File \u001b[1;32mc:\\Users\\elmah\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6404\u001b[0m, in \u001b[0;36mIndex.map\u001b[1;34m(self, mapper, na_action)\u001b[0m\n\u001b[0;32m   6384\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   6385\u001b[0m \u001b[39mMap values using an input mapping or function.\u001b[39;00m\n\u001b[0;32m   6386\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   6400\u001b[0m \u001b[39m    a MultiIndex will be returned.\u001b[39;00m\n\u001b[0;32m   6401\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   6402\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mindexes\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmulti\u001b[39;00m \u001b[39mimport\u001b[39;00m MultiIndex\n\u001b[1;32m-> 6404\u001b[0m new_values \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_map_values(mapper, na_action\u001b[39m=\u001b[39;49mna_action)\n\u001b[0;32m   6406\u001b[0m \u001b[39m# we can return a MultiIndex\u001b[39;00m\n\u001b[0;32m   6407\u001b[0m \u001b[39mif\u001b[39;00m new_values\u001b[39m.\u001b[39msize \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(new_values[\u001b[39m0\u001b[39m], \u001b[39mtuple\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\elmah\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\base.py:890\u001b[0m, in \u001b[0;36mIndexOpsMixin._map_values\u001b[1;34m(self, mapper, na_action)\u001b[0m\n\u001b[0;32m    887\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m    889\u001b[0m \u001b[39m# mapper is a function\u001b[39;00m\n\u001b[1;32m--> 890\u001b[0m new_values \u001b[39m=\u001b[39m map_f(values, mapper)\n\u001b[0;32m    892\u001b[0m \u001b[39mreturn\u001b[39;00m new_values\n",
+      "File \u001b[1;32mc:\\Users\\elmah\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\_libs\\lib.pyx:2918\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\My Projects\\challengedata.ens.fr-RealEstatePricePrediction\\dataloader\\get.py:26\u001b[0m, in \u001b[0;36mDataGetter.getData.<locals>.<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[39mif\u001b[39;00m test_or_train \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     25\u001b[0m     df[\u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreadTabular()[\u001b[39m'\u001b[39m\u001b[39my_train\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 26\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mimages\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreadTabular()[\u001b[39m'\u001b[39m\u001b[39mX_\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtest_or_train]\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mmap(\u001b[39mlambda\u001b[39;00m x: LazyImages(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata_folder_loc\u001b[39m+\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m/reduced_images\u001b[39;49m\u001b[39m\"\u001b[39;49m, test_or_train, x))\n\u001b[0;32m     27\u001b[0m \u001b[39mreturn\u001b[39;00m df\n",
+      "File \u001b[1;32mc:\\My Projects\\challengedata.ens.fr-RealEstatePricePrediction\\dataloader\\get.py:38\u001b[0m, in \u001b[0;36mLazyImages.__init__\u001b[1;34m(self, folder_loc, test_or_train, id_annonce)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, folder_loc, test_or_train, id_annonce):\n\u001b[1;32m---> 38\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpaths \u001b[39m=\u001b[39m [f\u001b[39m.\u001b[39mpath \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mscandir(folder_loc\u001b[39m+\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m+\u001b[39;49mtest_or_train\u001b[39m+\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m/ann_\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m+\u001b[39;49m\u001b[39mstr\u001b[39;49m(id_annonce))]\n\u001b[0;32m     39\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mNaN\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "dg.getData('train')"
    ]
@@ -137,10 +155,149 @@
     "    return [get_caption(i) for i in x.load()]\n",
     "\n",
     "df = dg.getData(\"train\")\n",
-    "df['captions'] = df['images'].apply(caption_from_image_file)\n",
+    "# df['captions'] = df['images'].apply(caption_from_image_file)\n",
     "\n",
     "\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c1cf8e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>captions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35772577</td>\n",
+       "      <td>[['a blurry image of a person walking across a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35997921</td>\n",
+       "      <td>[['a very blurry view of a green street sign, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35897205</td>\n",
+       "      <td>[['an open balcony is seen from outside near s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35835335</td>\n",
+       "      <td>[['a large white house with lots of windows']]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35999645</td>\n",
+       "      <td>[['a sign on a building displays information t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>35997109</td>\n",
+       "      <td>[['a kitchen with a small table, stove and cab...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>35734739</td>\n",
+       "      <td>[[\"a man's bathroom with some tools hanging fr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>36003641</td>\n",
+       "      <td>[['a blurry photo of a house and some grass, a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>36037549</td>\n",
+       "      <td>[['blurry image of man taking picture in front...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>36013375</td>\n",
+       "      <td>[['a picture of some houses near the water, th...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index                                           captions\n",
+       "0   35772577  [['a blurry image of a person walking across a...\n",
+       "1   35997921  [['a very blurry view of a green street sign, ...\n",
+       "2   35897205  [['an open balcony is seen from outside near s...\n",
+       "3   35835335     [['a large white house with lots of windows']]\n",
+       "4   35999645  [['a sign on a building displays information t...\n",
+       "..       ...                                                ...\n",
+       "5   35997109  [['a kitchen with a small table, stove and cab...\n",
+       "6   35734739  [[\"a man's bathroom with some tools hanging fr...\n",
+       "7   36003641  [['a blurry photo of a house and some grass, a...\n",
+       "8   36037549  [['blurry image of man taking picture in front...\n",
+       "9   36013375  [['a picture of some houses near the water, th...\n",
+       "\n",
+       "[90 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from preprocessing.parseOutputs import parseOutputs\n",
+    "\n",
+    "df_cap = parseOutputs()\n",
+    "\n",
+    "# rename the columns\n",
+    "df_cap.rename(columns={'images': 'captions'}, inplace=True)\n",
+    "\n",
+    "df_cap\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "f9e2e500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save captions in a csv file\n",
+    "df_cap.to_csv(\"captions.csv\", index=False)"
    ]
   }
  ],
@@ -160,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.0"
   },
   "varInspector": {
    "cols": {
@@ -193,7 +350,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "b58a440e7c41d8e6b23e002dc56fe0c4f343f7392b9b491490b79e5d7e2436cd"
+    "hash": "31ff630c6e82ba12fef539dea8022209045e49d81c27e1972fa5386bff428379"
    }
   }
  },
